--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@ body {
   font-family: "Rubik", sans-serif;
   padding: 0;
   margin: 0;
-  background-color: #FFFBD6;
+  /* background-color: #FFFBD6; */
   height: 100%;
   overflow: auto;
   scroll-snap-type: y mandatory;
